# fantastic-octo-waffle

./: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  ANALYSIS_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON_ANALYSIS.md  CONTRIBUTING.md  CURRENT_SESSION_SUMMARY.md  Cigar_neck_csharp_tree.json  ClownNose_head_csharp_tree.json  Directory.Build.props  EXTRACTION_STATUS.md  FEATURE_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PRE_RESET_HEAD.txt  PROJECT_NOTES.md  QUICK_REFERENCE.md  README.md  RESEARCH_TYPETREE_ARRAY_PARSING.md  SCALE_AND_ANCHORING_FIX.md  SECURITY.md  STREAMING_RESEARCH_COMPLETE.md  SUPPORT.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_FAILURES_ANALYSIS.md  THUNDERSTORE_INTEGRATION.md  THUNDERSTORE_LIBRARY_SUMMARY.md  TYPETREE_BINARY_PARSING_ALGORITHM.md  TYPETREE_BINARY_PARSING_VISUAL.md  TYPETREE_FORMAT_ANALYSIS.md  TYPETREE_PARSING_ANSWERS.md  TYPETREE_PARSING_SOURCE_REFERENCES.md  (+28 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.playwright/: cli.config.json
DebugMeshExtraction/: DebugMeshExtraction.csproj  Program.cs
Tools/: DebugTypeTree.cs
cloudflare-worker/: .gitignore  README.md  package-lock.json  package.json  vitest.config.js  worker.js  wrangler.toml
docs/: Architecture.md  BlazorUI.md  BundleFileAPI.md  BundleFilePerformance.md  CSHARP_PORT_STUBS.md  ci.md  (+41 more)
(+572 files in other folders)
