[project]
name = "unitypy-image-pipeline"
version = "0.1.0"
description = "UnityPy-based processor and static viewer scaffold"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["processor/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
